glitch fix[Guide.js]: logo doesn't get clipped on desktop (was crushed within the boundaries of the heading

--- a/FrontEnd/src/pages/Guide/Guide.css
+++ b/FrontEnd/src/pages/Guide/Guide.css
@@ -25,8 +25,6 @@
 .logo-bg {
   position: relative; 
   z-index: 2;
-  margin: 100px 0;
-  padding: 70px;
 }
 
 .about,
